[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11.0"
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["full"] }
flate2 = "1.0.22"
tar = "0.4.37"
uuid = { version = "0.8.2", features = ["v4"] }
